# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_app.py  test_backend_functionality.py
.claude/agents/: color-theme-palette-engineer.md  nextjs-runtime-fixer.md  todo-chat-agent.md  ui-upgrader-engineer.md
.claude/skills/: clarification-resolver.md  tool-driven-task-executor.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  alembic.ini  check_constraints.py  check_routes.py  check_schema.py  fix_alembic.py  pyproject.toml  simple_test.py  simple_test_backend.py  test_api_integration.py  test_argon2.py  test_auth.py  test_database_connectivity.py  validate_implementation.py
backend/alembic/: env.py
backend/alembic/versions/: 082ad38b8094_initial_todo_model_with_user_id.py  6cb6e57ba0c8_change_user_id_from_uuid_to_string.py
backend/history/prompts/general/: 001-add-chat-api-mcp-tools-security-fixes.general.prompt.md
backend/src/: main.py
backend/src/api/: auth.py
backend/src/api/v1/: chat.py  router.py
backend/src/api/v2/: errors.py  models.py  user_tasks.py
backend/src/auth/: __init__.py  jwt_handler.py  middleware.py  models.py
backend/src/config/: settings.py
backend/src/database/: connection.py
backend/src/models/: __init__.py  base.py  conversation.py  todo.py  user.py
backend/src/schemas/: chat.py  conversation.py
backend/src/services/: __init__.py  ai_agent_service.py  auth_service.py  conversation_service.py  todo_service.py  user_service.py  user_task_service.py
backend/src/utils/: __init__.py  database.py  exceptions.py  logging.py  security.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_database_setup.py  test_jwt.py  test_main.py  test_todo_persistence.py  test_user_isolation.py
backend/tests/api/: test_todo.py  test_user_tasks.py
frontend/: README.md  package.json  package.json.bak  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  FloatingChat.tsx  FloatingChatWidget.tsx  ProtectedRoute.tsx  SimpleChatWidget.tsx  WithAuth.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: auth.ts  better-auth-client.js  better-auth.js  storage.ts
frontend/services/: api.ts  authService.ts  chat-api.ts  todoService.ts
frontend/types/: index.ts  lucide-react.d.ts
history/adr/: 001-frontend-first-architecture-with-mock-api-layer.md
mcp/src/: server.py
specs/001-ai-agent-behavior/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-backend-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chatbot-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chatkit-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kubernetes-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-task-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: main.py
(+129 files in other folders)
