[project]
name = "todo-console-app"
version = "0.1.0"
description = "A clean, maintainable, in-memory todo application that runs in the terminal"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Najam-ul-islam", email = "najam.capricon88@gmail.com"}
]

[project.scripts]
todo = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.0.0"
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]